Translation works:  > the translation process is handled  > the translation results are rendered.